fixed word and ie scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -993,15 +993,15 @@ select::-ms-expand {
 }
 
 font.Y1:before {
-    content: "Y1: ";
+    content: "1Y: ";
 }
 
 font.Y2:before {
-    content: "Y2: ";
+    content: "2Y: ";
 }
 
 font.Y3:before {
-    content: "Y3: ";
+    content: "3Y: ";
 }
 
 .find_item h5 .f_grey {
@@ -1066,7 +1066,7 @@ font.Y3:before {
 
 #analysis {
     padding: 65px 0 0;
-    overflow-x: hidden;
+    overflow: hidden;
     padding: 95px 0 0;
 }
 
